# qwen3-8b-reformed-pt-br-v0.1

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README_github.md  README_huggingface.md  VALIDATION_REPORT.md  openscriptura-plan.jsx  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: exp_a.yaml  exp_b.yaml  exp_c.yaml  exp_d.yaml  final.yaml  system_prompt.txt
configs/cefeai/: README.md  cb_scoring_prompt.json  rr_scoring_prompt.json
data/tier_a/: review_v0_1_1.html  review_v0_1_1_batch2.html  tier_a.jsonl  tier_a_reviewed_v0_1_1.json  tier_a_reviewed_v0_1_1_batch2.json
docs/: EVALUATION_PROTOCOL.md  JUDGE_VALIDATION.md  LESSONS.md  PASTORAL_REVIEW_PROTOCOL.md  PHASE4_RESULTS.md  THEOLOGICAL_STATEMENT.md
reports/: eda_report.html  eda_report.md
scripts/: 00_cefeai_baseline.py  00_setup_data.py  01_build_tier_c.py  02_build_tier_b.py  03_eda.py  04_experiment.py  05_train_final.py  06_export.py  07_cefeai_eval.py  08_judge_validation.py  _build_comparison.py  _reformed_probe.py  build_tier_a.py  inspect_cb_errors.py  merge_dataset.py  translate_benchmark.py  vastai_run_experiments.py
scripts/utils/: __init__.py  api_client.py  cefeai.py  cefeai_leaderboard.py  cost_tracker.py  hash.py  logger.py  progress.py  report.py
tests/: conftest.py  test_api_client.py  test_cefeai.py  test_cost_tracker.py  test_hash.py  test_judge_validation.py  test_report.py  test_translate.py
